<resources>
    <string name="app_name">Biplap</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_phone">Enter your Phone</string>
    <string name="Clear">Clear</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="php">PHP</string>
    <string name="Cpp">C++</string>
    <string name="java">Java</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="submit">Submit</string>
    <string name="explictbtn">ExplictBtn</string>
    <string name="welcome_to_second_page">Welcome to Second Page</string>
    <string name="biplap">Biplap</string>
    <string name="Enter_Name">Name</string>
    <string name="Enter_Address">Address</string>
    <string name="Enter_Email">Email</string>
    <string name="Enter_Mobile_no">Mobile No.</string>
    <string name="new_form">Form</string>
    <string name="second_frag">Second Frag</string>
    <string name="first_frag">First Frag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="image">Image</string>
    <string name="do_you_want_to_continue_enter_ok_other_wise_click_cancel">Do you want to continue enter ok other wise click cancel</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="gridview">Gridview</string>
    <string name="grid_view_example">Grid View Example</string>
    <string name="recycler_view">Recycler view</string>

</resources>