<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/settings"
    android:title="@string/settings">

</item>

    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_edit">

    </item>

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_delete">

    </item>

    <item
        android:id="@+id/save"
        android:title="@string/save"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_save">

    </item>

</menu>