<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".ThirdActivities">

    <TextView
        android:id="@+id/enternameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enter_Name"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/enteraddressTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enter_Address"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/enteremailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enter_Email"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:id="@+id/entermobilenoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enter_Mobile_no"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/Mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
  />
    <Button
        android:id="@+id/submit3rd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit" />


</LinearLayout>